--- a/styles/styles.css
+++ b/styles/styles.css
@@ -2,7 +2,12 @@
 body {
   font-family: Arial, Helvetica, sans-serif;
   margin: 0;
-  padding: 0 20px;
+  padding: 20px;
+ 
+}
+.our-services,
+.contacts {
+  margin-top: 50px;
 
 }
 
@@ -12,7 +17,6 @@ header {
   display: flex;
   justify-content: space-between;
   align-items: center;
-  /* padding: 0 20px; */
 
 }
 .logo-div img{
@@ -53,6 +57,7 @@ header a:hover {
 .hero img{
   width: 100%;
   height: 550px;
+  border-radius: 8px;
   display: block;
   margin: 0 auto;
   opacity: 0.5;
@@ -70,7 +75,9 @@ header a:hover {
 
 }
 .hero-text button,
-.about-us button{
+.about-us button,
+.service-card button,
+.contacts button {
   background-color: rgb(0, 68, 72);
   padding: 8px 16px;
   border: none;
@@ -82,8 +89,116 @@ header a:hover {
 }
 
 /*About Us styling*/
-.about-us h2{
-  color: rgb(0, 68, 72);
+.about-us {
+  display: flex;
+  gap: 50px;
+  margin-top: 40px;
+    line-height: 1.5;
 
+
+}
+.about-us h2,
+.our-services h2,
+.contacts h2 {
+  color: rgb(0, 68, 72);
+  text-align: center;
+  margin-bottom: 0;
   
+}
+.about-contents p:hover {
+  color: rgb(0, 68, 72);
+  font-weight: bold;
+  cursor: pointer;
+
+}
+.about-img {
+  width: 50%;
+  border-radius: 8px;
+
+
+}
+
+/*Our Services styling*/
+.services-div {
+  background-color: rgb(0, 68, 72);
+  display: flex;
+  gap: 20px;
+  justify-content: space-between;
+  align-items: center;
+  padding: 20px;
+  height: 500px;
+  border-radius: 14px;
+
+}
+.our-services h4,
+.contacts h4 {
+  color: black;
+  font-weight: normal;
+  line-height: 1.5;
+
+
+}
+.service-card {
+  background-color: white;
+  border-radius: 20px; 
+  padding: 8px 20px;
+  width: 100%;
+  height: 70%; 
+  cursor: pointer;
+
+}
+.service-card:hover {
+  transform: scale(1.1);
+  transition-duration: 1s;
+
+}
+.service-card img{
+  height: 200px;
+  border-radius: 10px;
+
+}
+
+/*Contacts Section styling*/
+#myForm {
+  width: 500px;
+  height: auto;
+  border-radius: 8px;
+  box-shadow: 0 0 10px rgba(0, 68, 72, 0.3);
+  display: flex;
+  flex-direction: column;
+  gap: 8px;
+  padding: 20px;
+
+}
+input {
+  margin: 10px;
+  padding: 10px;
+  border: 1px solid black;
+  border-radius: 10px;
+  
+}
+/*Footer*/
+footer {
+  height: 250px;
+  background-color: rgb(0, 68, 72);
+  color: white;
+  padding: 20px;
+  border-radius: 4px;
+  margin-top: 50px;
+
+}
+footer div {
+  font-family: sans-serif;
+  line-height: 1.5;
+
+}
+.contact-info ,
+.working-hours {
+  margin-bottom: 50px;
+  
+}
+.opening-hours {
+  color: black;
+  font-weight: bold;
+
 }
