--- a/styles/styles.css
+++ b/styles/styles.css
@@ -13,10 +13,11 @@ body {
 
 /*Header styling*/
 header {
-  width: 80%;
+  width: 96%;
   display: flex;
   justify-content: space-between;
   align-items: center;
+  border-bottom: 1px solid rgb(1, 159, 159);
 
 }
 .logo-div img{
@@ -74,9 +75,8 @@ header a:hover {
   line-height: 1.3;
 
 }
-.hero-text button,
-.about-us button,
-.service-card button,
+.hero-text a,
+.service-card a,
 .contacts button {
   background-color: rgb(0, 68, 72);
   padding: 8px 16px;
@@ -84,6 +84,7 @@ header a:hover {
   border-radius: 10px;
   color: white;
   font-size: 16px;
+  text-decoration: none;
   cursor: pointer;
 
 }
@@ -177,6 +178,11 @@ input {
   border-radius: 10px;
   
 }
+label {
+  color: rgb(0, 68, 72);
+  font-weight: bold;
+
+}
 /*Footer*/
 footer {
   height: 250px;
@@ -201,4 +207,50 @@ footer div {
   color: black;
   font-weight: bold;
 
+}
+/*About Us Page styling*/
+.service-info {
+  line-height: 1.5; 
+  box-shadow: 0 0 10px rgba(0, 68, 72, 0.3);
+  padding: 4px 24px;
+  margin-bottom: 30px;
+
+}
+.service-info:hover {
+  background-color: rgb(0, 68, 72);
+  color: white;
+
+}
+.service-info:hover h4{
+  color: black;
+  
+}
+.stats {
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+  gap: 32px;
+  text-align: center;
+
+}
+.stat {
+  margin-top: 32px;
+
+}
+.stat h3 {
+  font-size: 32px;
+  color: white; 
+  
+}
+
+.stat p {
+  font-size: 24px;
+  font-weight: 600;
+ 
+}
+.animated-counter {
+  height: 300px;
+  background-color: rgb(0, 68, 72);
+  border-radius: 8px;
+ 
 }
